Fix more tag summary gap

--- a/backend/src/styles/style.css
+++ b/backend/src/styles/style.css
@@ -46,6 +46,7 @@
 .tag {
   max-width: 50%;
   margin: 0 auto;
+  padding: 10px 20px;
 }
 
 .more a {
@@ -53,10 +54,9 @@
   line-height: 1.5em;
 }
 
-.summary {
-  width: 50%;
+.description {
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 20px;
   font-size: 16px;
 }
 
