--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -33,6 +33,7 @@
 .tag {
   max-width: 50%;
   margin: 0 auto;
+  padding: 10px 20px;
 }
 
 .more a {
@@ -40,10 +41,9 @@
   line-height: 1.5em;
 }
 
-.summary {
-  width: 50%;
+.description {
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 20px;
   font-size: 16px;
 }
 
